@@ -7,10 +7,11 @@ package cassandra
 import (
 	"errors"
 	"fmt"
-	"github.com/elastic/beats/libbeat/common/streambuf"
-	"github.com/elastic/beats/libbeat/logp"
 	"runtime"
 	"sync"
+
+	"github.com/elastic/beats/libbeat/common/streambuf"
+	"github.com/elastic/beats/libbeat/logp"
 )
 
 var (
